Fix bug that was not showing popular channels after typing in search bar

--- a/app/index.css
+++ b/app/index.css
@@ -176,6 +176,7 @@ ul {
 .twitch-logo {
   width: 2.3em;
   height: 2.3em;
+  margin: 1em
 }
 
 .twitch-logo2 {
@@ -369,6 +370,7 @@ ul {
   transition: 2s;
   position: fixed;
   height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));
 }
 
 .menu a {
@@ -508,7 +510,7 @@ ul {
   position: fixed;
   top: 90%;
   right: 0;
-  background-color: grey;
+  background-color: #522491;
   border: none;
   padding: 10px 5px;
   text-align: center;
@@ -517,6 +519,16 @@ ul {
   opacity: 0.6;
   transition: 0.3s;
   border-radius: 10%;
+}
+
+.nav-list {
+  display: none;
+}
+
+.scroll-up {
+  position: fixed;
+  top: 85%;
+  right: 3%;
 }
 
 @media screen and (min-width: 600px) {
@@ -677,6 +689,7 @@ ul {
   .twitch-logo {
     width: 1.5em;
     height: 1.5em;
+    margin: 0;
   }
 
   .twitch-logo2 {
@@ -792,12 +805,6 @@ ul {
   .channels_container {
     display: flex;
     flex-wrap: wrap;
-  }
-
-  .scroll-up {
-    position: fixed;
-    top: 85%;
-    right: 3%;
   }
 
   .scroll-up:hover {
